@@ -1,6 +1,10 @@
 {{$NEXT}}
 
+    - Clone STDOUT on load in case it gets changed later
+
 0.013     2018-12-04 11:38:36-08:00 America/Los_Angeles
+
+    - Minor fixes
 
 0.012     2017-10-11 08:54:52-07:00 America/Los_Angeles
 
